feat: enhance button components with loading indicators and update localization strings

--- a/apps/extension/src/locales/de.json
+++ b/apps/extension/src/locales/de.json
@@ -243,6 +243,7 @@
   "expert-settings": "Experteneinstellungen",
   "expert-settings-description": "Erweiterte Verifizierungseinstellungen und Feldgewichtungen für Metadaten-Abgleich konfigurieren",
   "extract-references": "Referenzen extrahieren",
+  "extracting": "Extrahiere",
   "extracted": "Extrahiert",
   "extracting-dois": "Extrahiere DOIs",
   "extracting-dois-description": "Extrahiere DOIs aus dem Text. Bitte warten...",
@@ -685,6 +686,7 @@
   "paragraph-number": "Absatznummer",
   "parse": "Parsen",
   "parse-references": "Referenzen parsen",
+  "parsing": "Parse",
   "parse-mode-title": "Parse-Modus",
   "parse-mode-description": "Fügen Sie Ihre Bibliographie oder Referenzliste in das Textfeld unten ein. Für beste Ergebnisse sollte jede Referenz in einer eigenen Zeile stehen. Der Parser überspringt automatisch leere Zeilen und verarbeitet strukturierte Zitate.",
   "ai-extraction-mode-title": "KI-Extraktions-Modus",
@@ -899,6 +901,7 @@
   "technical-fixes": "Technische Korrekturen",
   "technical-fixes-description": "OCR-Fehler, Unicode-Probleme und Formatierungsprobleme",
   "test-api-key": "API-Schlüssel testen",
+  "testing": "Teste",
   "text-extraction": "Textverarbeitung",
   "text-extraction-description": "Grundlegende Textkorrekturen und Normalisierungen",
   "text-extraction-settings": "Textverarbeitung",
