--- a/apps/extension/src/locales/en.json
+++ b/apps/extension/src/locales/en.json
@@ -243,6 +243,7 @@
   "expert-settings": "Expert Settings",
   "expert-settings-description": "Configure advanced verification settings and field weights for metadata matching",
   "extract-references": "Extract References",
+  "extracting": "Extracting",
   "extracted": "Extracted",
   "extracting-dois": "Extracting DOIs",
   "extracting-dois-description": "Extracting DOIs from the Text. Please wait...",
@@ -685,6 +686,7 @@
   "paragraph-number": "Paragraph Number",
   "parse": "Parse",
   "parse-references": "Parse References",
+  "parsing": "Parsing",
   "parse-mode-title": "Parse Mode",
   "parse-mode-description": "Paste your bibliography or reference list into the text area below. For best results, place each citation on its own line. The parser will automatically skip empty lines and process structured references.",
   "ai-extraction-mode-title": "AI Extraction Mode",
@@ -899,6 +901,7 @@
   "technical-fixes": "Technical Fixes",
   "technical-fixes-description": "OCR errors, Unicode issues, and formatting problems",
   "test-api-key": "Test API Key",
+  "testing": "Testing",
   "text-extraction": "Text Extraction",
   "text-extraction-description": "Basic text corrections and normalizations",
   "text-extraction-settings": "Text Extraction",
