refactor: remove ProgressFeedback component and update ReportSection and ReportSubtitle for improved reference handling

--- a/apps/extension/src/locales/de.json
+++ b/apps/extension/src/locales/de.json
@@ -233,9 +233,11 @@
   "event-place": "Ereignisort",
   "event-title": "Ereignistitel",
   "exact-match": "Exakte Übereinstimmung",
+  "exact-match-chip": "Exakt",
   "exact-match-threshold": "Exakte Übereinstimmung",
   "exact-match-threshold-description": "Perfekte Übereinstimmungen bei 100 % Ähnlichkeit",
   "exact-match-threshold-example": "95% = Bewertungen 95-100% werden als grüne exakte Übereinstimmungen angezeigt",
+  "exact-match-tooltip": "Exakte Übereinstimmungen (100%)",
   "example": "Beispiel",
   "example-explanation": "In diesem Beispiel konzentriert sich die Verifizierung zu 50 % auf Titel-Ähnlichkeit, zu 30 % auf DOI-Übereinstimmung und zu 20   % auf Autoren-Ähnlichkeit. Alle anderen Felder (Jahr, Zeitschrift, Seiten, etc.) werden ignoriert.",
   "example-scenario": "Sie möchten sich nur auf Titel- und DOI-Abgleich konzentrieren und alle anderen Felder ignorieren",
@@ -605,8 +607,10 @@
   "no-impact": "Feld wird ignoriert",
   "no-input-provided": "Keine Eingabe bereitgestellt",
   "no-match": "Keine Übereinstimmung",
+  "no-match-chip": "Keine Übereinstimmung",
   "no-match-threshold": "Keine Übereinstimmung",
   "no-match-threshold-description": "Referenzen unter der möglichen Übereinstimmungs-Schwelle",
+  "no-match-tooltip": "Keine Übereinstimmungen gefunden (<{possibleThreshold}%)",
   "no-matching-source-found": "Keine passende Quelle gefunden oder Überprüfung fehlgeschlagen",
   "no-references-detected": "Keine Referenzen erkannt",
   "no-references-found": "Keine Referenzen gefunden",
@@ -703,8 +707,11 @@
   "pmcid": "PMCID",
   "pmid": "PMID",
   "popup": "Popup",
+  "possible-match": "Mögliche Übereinstimmung",
+  "possible-match-chip": "Möglich",
   "possible-match-threshold": "Mögliche Übereinstimmung",
   "possible-match-threshold-description": "Mindestbewertung für orangen 'mögliche Übereinstimmung' Indikator",
+  "possible-match-tooltip": "Mögliche Übereinstimmungen ({possibleThreshold}-{strongThreshold}%)",
   "practical-example": "Praktisches Beispiel",
   "printing": "Auflage",
   "producer": "Produzent",
@@ -888,8 +895,11 @@
   "sources-found": "Quellen gefunden",
   "status": "Status",
   "sth-went-wrong": "Etwas ist schief gelaufen",
+  "strong-match": "Starke Übereinstimmung",
+  "strong-match-chip": "Stark",
   "strong-match-threshold": "Starke Übereinstimmung",
   "strong-match-threshold-description": "Mindestbewertung für grünen 'starke Übereinstimmung' Indikator",
+  "strong-match-tooltip": "Starke Übereinstimmungen (≥{strongThreshold}%)",
   "submitted": "Eingereicht am",
   "subtitle": "Untertitel",
   "supplement": "Supplement",
