--- a/apps/extension/src/locales/en.json
+++ b/apps/extension/src/locales/en.json
@@ -233,9 +233,11 @@
   "event-place": "Event Place",
   "event-title": "Event Title",
   "exact-match": "Exact Match",
+  "exact-match-chip": "Exact",
   "exact-match-threshold": "Exact Match Threshold",
   "exact-match-threshold-description": "Perfect matches at 100% similarity",
   "exact-match-threshold-example": "95% = scores 95-100% show as green exact matches",
+  "exact-match-tooltip": "Exact matches (100%)",
   "example": "Example",
   "example-explanation": "In this example, verification will focus 50% on title similarity, 30% on DOI match, and 20% on author similarity. All other fields (year, journal, pages, etc.) are ignored.",
   "example-scenario": "You want to focus only on title and DOI matching, ignoring all other fields",
@@ -605,8 +607,10 @@
   "no-impact": "Field is ignored",
   "no-input-provided": "No Input Provided",
   "no-match": "No Match",
+  "no-match-chip": "No Match",
   "no-match-threshold": "No Match",
   "no-match-threshold-description": "References below the possible match threshold",
+  "no-match-tooltip": "No matches found (<{possibleThreshold}%)",
   "no-matching-source-found": " No matching source found or verification failed",
   "no-references-detected": "No references detected",
   "no-references-found": "No references found",
@@ -703,8 +707,11 @@
   "pmcid": "PMCID",
   "pmid": "PMID",
   "popup": "Popup",
+  "possible-match": "Possible Match",
+  "possible-match-chip": "Possible",
   "possible-match-threshold": "Possible Match Threshold",
   "possible-match-threshold-description": "Minimum score for orange 'possible match' indicator",
+  "possible-match-tooltip": "Possible matches ({possibleThreshold}-{strongThreshold}%)",
   "practical-example": "Practical Example",
   "printing": "Printing",
   "producer": "Producer",
@@ -888,8 +895,11 @@
   "sources-found": "",
   "status": "Status",
   "sth-went-wrong": "Something went wrong",
+  "strong-match": "Strong Match",
+  "strong-match-chip": "Strong",
   "strong-match-threshold": "Strong Match Threshold",
   "strong-match-threshold-description": "Minimum score for green 'strong match' indicator",
+  "strong-match-tooltip": "Strong matches (≥{strongThreshold}%)",
   "submitted": "Date Submitted",
   "subtitle": "Subtitle",
   "supplement": "Supplement",
