feat: add database configuration panel and update settings schema for database management

--- a/apps/extension/src/locales/de.json
+++ b/apps/extension/src/locales/de.json
@@ -1083,5 +1083,6 @@
   "year": "Jahr",
   "year-match": "Jahr-Übereinstimmung",
   "year-suffix": "Jahr-Suffix",
-  "yes": "Ja"
+  "yes": "Ja",
+  "priority": "Priorität"
 }
