feat: add search settings component and database panel integration

--- a/apps/extension/src/locales/de.json
+++ b/apps/extension/src/locales/de.json
@@ -310,6 +310,9 @@
   "extraction-select-all": "Alle auswählen",
   "extraction-settings": "Extraktions-Einstellungen",
   "extraction-settings-description": "Konfiguriere den Extraktionsmodus und wähle die Metadatenfelder aus, die bei der Dokumentenverarbeitung extrahiert werden sollen",
+  "search-settings": "Such-Einstellungen",
+  "search-settings-description": "Konfiguriere das Suchverhalten und die Prioritäten der Datenbanken für die Referenzverifikation",
+  "search-settings-title": "Such-Einstellungen",
   "extraction-ai-title": "KI-Extraktion",
   "extraction-ai-description": "Steuern Sie, ob KI-gestützte Extraktion für bessere Genauigkeit verwendet werden soll",
   "extraction-ai-enabled": "KI für Extraktion verwenden",
