--- a/apps/extension/src/locales/en.json
+++ b/apps/extension/src/locales/en.json
@@ -320,6 +320,9 @@
   "extraction-select-all": "Select All",
   "extraction-settings": "Extraction Settings",
   "extraction-settings-description": "Configure the extraction mode and select which metadata fields should be extracted during document extraction",
+  "search-settings": "Search Settings",
+  "search-settings-description": "Configure database search behavior and priorities for reference verification",
+  "search-settings-title": "Search Settings",
   "extraction-ai-title": "AI Extraction",
   "extraction-ai-description": "Control whether to use AI-powered extraction for better accuracy",
   "extraction-ai-enabled": "Use AI for extraction",
