feat: add dynamic titles and subtitles for AI extraction in InputCard component; update translations in English and German

--- a/apps/extension/src/locales/de.json
+++ b/apps/extension/src/locales/de.json
@@ -244,7 +244,11 @@
   "executive-producer": "Ausführender Produzent",
   "expert-settings": "Experteneinstellungen",
   "expert-settings-description": "Erweiterte Verifizierungseinstellungen und Feldgewichtungen für Metadaten-Abgleich konfigurieren",
+  "extract": "Extrahieren",
   "extract-references": "Referenzen extrahieren",
+  "input-references-for-ai-extraction": "Referenzen für KI-gestützte Extraktion und Verifizierung eingeben",
+  "input-references-for-ai-extraction-only": "Referenzen oder Dateien für KI-gestützte Extraktion eingeben",
+  "input-references-as-text-only": "Referenzen als Text für Parsing eingeben",
   "extracting": "Extrahiere",
   "extracted": "Extrahiert",
   "extracting-dois": "Extrahiere DOIs",
