--- a/apps/extension/src/locales/en.json
+++ b/apps/extension/src/locales/en.json
@@ -254,7 +254,11 @@
   "executive-producer": "Executive Producer",
   "expert-settings": "Expert Settings",
   "expert-settings-description": "Configure advanced verification settings and field weights for metadata matching",
+  "extract": "Extract",
   "extract-references": "Extract References",
+  "input-references-for-ai-extraction": "Input references for AI-powered extraction and verification",
+  "input-references-for-ai-extraction-only": "Input references or files for AI-powered extraction",
+  "input-references-as-text-only": "Input references as text for parsing",
   "extracting": "Extracting",
   "extracted": "Extracted",
   "extracting-dois": "Extracting DOIs",
