feat: add database descriptions and enhance toggle functionality to prevent disabling the last enabled database

--- a/apps/extension/src/locales/de.json
+++ b/apps/extension/src/locales/de.json
@@ -167,6 +167,15 @@
   "custom-matching-settings": "Benutzerdefinierte Abgleichseinstellungen",
   "custom-matching-settings-description": "Konfigurieren Sie detailliertes Abgleichsverhalten und Toleranzstufen für den benutzerdefinierten Modus",
   "dark": "Dunkel",
+  "database-arxiv-description": "Open-Access-Repository für Preprints in Physik, Mathematik, Informatik und verwandten Bereichen",
+  "database-crossref-description": "Umfassende Datenbank akademischer Publikationen mit DOI-Registrierung",
+  "database-europepmc-description": "Europäische Datenbank für biomedizinische und biowissenschaftliche Literatur",
+  "database-openalex-description": "Offener Katalog wissenschaftlicher Arbeiten, Autoren, Zeitschriften, Institutionen und Konzepte",
+  "database-semanticscholar-description": "KI-gestützte akademische Suchmaschine mit Artikeleinblicken und Empfehlungen",
+  "database-settings-description": "Konfigurieren Sie, welche akademischen Datenbanken durchsucht werden sollen und deren Prioritätsreihenfolge",
+  "database-settings-help": "Ziehen Sie, um die Priorität zu ändern. Höhere Positionen werden zuerst durchsucht. Schalten Sie die Sichtbarkeit ein/aus, um Datenbanken zu aktivieren/deaktivieren.",
+  "database-settings-subtitle": "Suchdatenbanken und Prioritäten verwalten",
+  "database-settings-title": "Datenbankkonfiguration",
   "date-information": "Datums-Informationen",
   "date-range": "Datumsbereich",
   "day": "Tag",
