--- a/apps/extension/src/locales/de.json
+++ b/apps/extension/src/locales/de.json
@@ -548,6 +548,7 @@
   "matching-fuzzy-settings": "Fuzzy-Matching",
   "matching-fuzzy-threshold": "Fuzzy-Matching-Sensitivität",
   "matching-fuzzy-threshold-description": "Höhere Werte = strengeres unscharfes Abgleichen (0.1-1.0)",
+  "matching-fields-last-field-tooltip": "Mindestens ein Abgleichsfeld muss mit 100% Gewichtung aktiviert bleiben",
   "matching-ignore-case": "Groß-/Kleinschreibung ignorieren",
   "matching-ignore-punctuation": "Satzzeichenunterschiede ignorieren",
   "matching-ignore-whitespace": "Leerzeichenunterschiede ignorieren",
