--- a/apps/extension/src/locales/de.json
+++ b/apps/extension/src/locales/de.json
@@ -24,9 +24,9 @@
   "ai-model": "KI-Modell",
   "ai-model-description": "Wählen Sie das KI-Modell, das für die Extraktion verwendet werden soll.",
   "ai-models": {
-    "claude-3-5-haiku-20241022": "Claude 3.5 Haiku (Schnell & Kosteneffizient)",
-    "claude-opus-4-20250514": "Claude Opus 4 (Höchste Intelligenz)",
-    "claude-sonnet-4-20250514": "Claude Sonnet 4 (Balance & Geschwindigkeit)",
+    "claude-3-5-haiku-latest": "Claude 3.5 Haiku (Schnell & Kosteneffizient)",
+    "claude-opus-4-1": "Claude Opus 4 (Höchste Intelligenz)",
+    "claude-sonnet-4-0": "Claude Sonnet 4 (Balance & Geschwindigkeit)",
     "deepseek-chat": "DeepSeek Chat (Allgemeine Anwendung)",
     "deepseek-reasoner": "DeepSeek Reasoner (Erweiterte Problemlösung)",
     "gemini-2-5-flash": "Gemini 2.5 Flash (Adaptives Denken)",
