fix: add API key test messages and update handling in components

--- a/apps/extension/src/locales/de.json
+++ b/apps/extension/src/locales/de.json
@@ -86,6 +86,9 @@
   "api-key-test-success": "API-Schlüssel ist gültig und funktioniert",
   "api-key-texfield-message": "Geben Sie hier Ihren API-Schlüssel ein, um die KI-Extraktion zu verwenden. Falls Sie noch keinen API-Schlüssel haben, können Sie diesen",
   "api-key-valid": "Gültig",
+  "api-test-error": "Unbekannter Fehler beim API-Test aufgetreten",
+  "api-test-no-references": "Test ausgeführt, aber keine Referenzen erkannt",
+  "api-test-success": "API-Schlüssel erfolgreich getestet",
   "app-title": "The Source Taster",
   "appearance": "Aussehen",
   "appearance-description": "Passe das Erscheinungsbild der Extension an",
