--- a/apps/extension/src/locales/en.json
+++ b/apps/extension/src/locales/en.json
@@ -86,6 +86,9 @@
   "api-key-test-success": "API key is valid and working",
   "api-key-texfield-message": "Enter your API key here to use the AI extraction. If you don’t have an API key yet, you can",
   "api-key-valid": "Valid",
+  "api-test-error": "Unknown error occurred during API test",
+  "api-test-no-references": "Test executed, but no references were detected",
+  "api-test-success": "API key successfully tested",
   "app-title": "The Source Taster",
   "appearance": "Appearance",
   "appearance-description": "Adjust the appearance of the extension",
