--- a/apps/extension/src/locales/de.json
+++ b/apps/extension/src/locales/de.json
@@ -30,11 +30,11 @@
     "deepseek-chat": "DeepSeek Chat (Allgemeine Anwendung)",
     "deepseek-reasoner": "DeepSeek Reasoner (Erweiterte Problemlösung)",
     "gemini-2-5-flash": "Gemini 2.5 Flash (Adaptives Denken)",
-    "gemini-2-5-flash-lite": "Gemini 2.5 Flash-Lite (Kosteneffizienteste)",
     "gemini-2-5-pro": "Gemini 2.5 Pro (Erweiterte Argumentation)",
-    "gpt-4o": "GPT-4o (Flagship Chat-Modell)",
-    "o3": "o3 (Stärkstes Reasoning-Modell)",
-    "o3-mini": "o3 Mini (Kosteneffizientes Reasoning)"
+    "gpt-4-1": "GPT-4.1 (Smartestes Non-Reasoning-Modell)",
+    "gpt-5": "GPT-5 (Bestes für Coding & Agentische Aufgaben)",
+    "gpt-5-mini": "GPT-5 Mini (Schnellere, kosteneffiziente Version)",
+    "gpt-5-nano": "GPT-5 Nano (Schnellstes, kosteneffizientestes)"
   },
   "ai-settings-api-key-help": "Sie können Ihren API-Schlüssel von der Anbieter-Plattform erhalten:",
   "ai-settings-api-key-help-anthropic": "Sie können Ihren Anthropic API-Schlüssel von der Konsole erhalten:",
