fix: simplify AI model descriptions in localization files

--- a/apps/extension/src/locales/de.json
+++ b/apps/extension/src/locales/de.json
@@ -24,17 +24,17 @@
   "ai-model": "KI-Modell",
   "ai-model-description": "Wählen Sie das KI-Modell, das für die Extraktion verwendet werden soll.",
   "ai-models": {
-    "claude-3-5-haiku-latest": "Claude 3.5 Haiku (Schnell & Kosteneffizient)",
-    "claude-opus-4-1": "Claude Opus 4 (Höchste Intelligenz)",
-    "claude-sonnet-4-0": "Claude Sonnet 4 (Balance & Geschwindigkeit)",
-    "deepseek-chat": "DeepSeek Chat (Allgemeine Anwendung)",
-    "deepseek-reasoner": "DeepSeek Reasoner (Erweiterte Problemlösung)",
-    "gemini-2-5-flash": "Gemini 2.5 Flash (Adaptives Denken)",
-    "gemini-2-5-pro": "Gemini 2.5 Pro (Erweiterte Argumentation)",
-    "gpt-4-1": "GPT-4.1 (Smartestes Non-Reasoning-Modell)",
-    "gpt-5": "GPT-5 (Bestes für Coding & Agentische Aufgaben)",
-    "gpt-5-mini": "GPT-5 Mini (Schnellere, kosteneffiziente Version)",
-    "gpt-5-nano": "GPT-5 Nano (Schnellstes, kosteneffizientestes)"
+    "claude-3-5-haiku-latest": "Claude 3.5 Haiku",
+    "claude-opus-4-1": "Claude Opus 4",
+    "claude-sonnet-4-0": "Claude Sonnet 4",
+    "deepseek-chat": "DeepSeek Chat",
+    "deepseek-reasoner": "DeepSeek Reasoner",
+    "gemini-2-5-flash": "Gemini 2.5 Flash",
+    "gemini-2-5-pro": "Gemini 2.5 Pro",
+    "gpt-4-1": "GPT-4.1",
+    "gpt-5": "GPT-5",
+    "gpt-5-mini": "GPT-5 Mini",
+    "gpt-5-nano": "GPT-5 Nano"
   },
   "ai-settings-api-key-help": "Sie können Ihren API-Schlüssel von der Anbieter-Plattform erhalten:",
   "ai-settings-api-key-help-anthropic": "Sie können Ihren Anthropic API-Schlüssel von der Konsole erhalten:",
