--- a/apps/extension/src/locales/en.json
+++ b/apps/extension/src/locales/en.json
@@ -24,17 +24,17 @@
   "ai-model": "AI Model",
   "ai-model-description": "Select the AI model to be used for the extraction.",
   "ai-models": {
-    "claude-3-5-haiku-latest": "Claude 3.5 Haiku (Fast & Cost-Efficient)",
-    "claude-opus-4-1": "Claude Opus 4 (Highest Intelligence)",
-    "claude-sonnet-4-0": "Claude Sonnet 4 (Balance & Speed)",
-    "deepseek-chat": "DeepSeek Chat (General Purpose)",
-    "deepseek-reasoner": "DeepSeek Reasoner (Advanced Problem Solving)",
-    "gemini-2-5-flash": "Gemini 2.5 Flash (Adaptive Thinking)",
-    "gemini-2-5-pro": "Gemini 2.5 Pro (Enhanced Reasoning)",
-    "gpt-4-1": "GPT-4.1 (Smartest Non-Reasoning Model)",
-    "gpt-5": "GPT-5 (Best for Coding & Agentic Tasks)",
-    "gpt-5-mini": "GPT-5 Mini (Faster, Cost-Efficient Version)",
-    "gpt-5-nano": "GPT-5 Nano (Fastest, Most Cost-Efficient)"
+    "claude-3-5-haiku-latest": "Claude 3.5 Haiku",
+    "claude-opus-4-1": "Claude Opus 4",
+    "claude-sonnet-4-0": "Claude Sonnet 4",
+    "deepseek-chat": "DeepSeek Chat",
+    "deepseek-reasoner": "DeepSeek Reasoner",
+    "gemini-2-5-flash": "Gemini 2.5 Flash",
+    "gemini-2-5-pro": "Gemini 2.5 Pro",
+    "gpt-4-1": "GPT-4.1",
+    "gpt-5": "GPT-5",
+    "gpt-5-mini": "GPT-5 Mini",
+    "gpt-5-nano": "GPT-5 Nano"
   },
   "ai-settings-api-key-help": "You can get your API key from the provider's platform:",
   "ai-settings-api-key-help-anthropic": "You can get your Anthropic API key from the console:",
