fix: update AI extraction mode description to clarify extraction time factors

--- a/apps/extension/src/locales/de.json
+++ b/apps/extension/src/locales/de.json
@@ -717,7 +717,7 @@
   "parse-mode-title": "Parse-Modus",
   "parse-mode-description": "Fügen Sie Ihre Bibliographie oder Referenzliste in das Textfeld unten ein. Für beste Ergebnisse sollte jede Referenz in einer eigenen Zeile stehen. Der Parser überspringt automatisch leere Zeilen und verarbeitet strukturierte Zitate.",
   "ai-extraction-mode-title": "KI-Extraktions-Modus",
-  "ai-extraction-mode-description": "Freitext-Eingabe und unstrukturierte Eingabe ist möglich, da die KI Referenzen automatisch aus jedem Textformat erkennen und extrahieren kann.",
+  "ai-extraction-mode-description": "Freitext-Eingabe und unstrukturierte Eingabe ist möglich, da die KI Referenzen automatisch aus jedem Textformat erkennen und extrahieren kann. Die Extraktionsdauer hängt von der Textlänge und dem gewählten KI-Modell/Anbieter ab.",
   "file-input-disabled-parse-mode": "Datei-Upload ist nur im KI-Extraktions-Modus verfügbar. Wechseln Sie zum KI-Modus, um PDF-Dateien hochzuladen.",
   "token-editor-help-title": "So verwenden Sie den Token-Editor",
   "token-editor-help-description": "Der Parser segmentiert Ihre Referenzen automatisch (Autor, Titel, etc.) mithilfe von maschinellem Lernen. Überprüfen Sie jedes Segment sorgfältig und korrigieren Sie Fehler, indem Sie auf Tokens klicken und das richtige Label aus der Dropdown-Liste auswählen. Kombinieren Sie verwandte Tokens - zum Beispiel gehört 'in' meist zu Editor oder Zeitschriftennamen. Für beste Ergebnisse muss jeder Token ein Label haben. Ihre Korrekturen helfen dabei, das Parser-Modell für alle zu verbessern.",
