refactor: unify subtitle for input references to support both text and files

--- a/apps/extension/src/locales/de.json
+++ b/apps/extension/src/locales/de.json
@@ -264,7 +264,8 @@
   "extracting-and-verifying": "Extrahiere & Verifiziere",
   "input-references-for-ai-extraction": "Referenzen für KI-gestützte Extraktion und Verifizierung eingeben",
   "input-references-for-ai-extraction-only": "Referenzen oder Dateien für KI-gestützte Extraktion eingeben",
-  "input-references-as-text-only": "Referenzen als Text für Parsing eingeben",
+  "input-references-as-text-only": "Referenzen oder Dateien für Parsing eingeben",
+  "input-references-or-files": "Referenzen oder Dateien eingeben",
   "extracting": "Extrahiere",
   "extracted": "Extrahiert",
   "extracting-dois": "Extrahiere DOIs",
