--- a/apps/extension/src/locales/en.json
+++ b/apps/extension/src/locales/en.json
@@ -265,7 +265,8 @@
   "extracting-and-verifying": "Extracting & Verifying",
   "input-references-for-ai-extraction": "Input references for AI-powered extraction and verification",
   "input-references-for-ai-extraction-only": "Input references or files for AI-powered extraction",
-  "input-references-as-text-only": "Input references as text for parsing",
+  "input-references-as-text-only": "Input references or files for parsing",
+  "input-references-or-files": "Input references or files",
   "extracting": "Extracting",
   "extracted": "Extracted",
   "extracting-dois": "Extracting DOIs",
