refactor: update subtitles and localization for parsed references in TokenEditor

--- a/apps/extension/src/locales/de.json
+++ b/apps/extension/src/locales/de.json
@@ -775,7 +775,8 @@
   "restart-verification": "Überprüfung neu starten",
   "retrieval-date": "Abrufdatum",
   "retry": "Wiederholen",
-  "review-and-relabel-parsed-references-by-clicking-on-tokens": "",
+  "review-and-relabel-parsed-references-by-clicking-on-tokens": "Geparste Referenzen überprüfen und durch Klicken auf Tokens neu beschriften",
+  "review-and-relabel-parsed-references": "Geparste Referenzen überprüfen und neu beschriften",
   "reviewed-author": "Rezensierter Autor",
   "reviewed-genre": "Rezensiertes Genre",
   "reviewed-title": "Rezensierter Titel",
