--- a/apps/extension/src/locales/en.json
+++ b/apps/extension/src/locales/en.json
@@ -777,6 +777,7 @@
   "retrieval-date": "Retrieval Date",
   "retry": "Retry",
   "review-and-relabel-parsed-references-by-clicking-on-tokens": "Review and relabel parsed references by clicking on tokens.",
+  "review-and-relabel-parsed-references": "Review and relabel parsed references",
   "reviewed-author": "Reviewed Author",
   "reviewed-genre": "Reviewed Genre",
   "reviewed-title": "Reviewed Title",
