--- a/apps/extension/src/locales/en.json
+++ b/apps/extension/src/locales/en.json
@@ -1093,6 +1093,9 @@
   "verify-reference-against-website-description": "Enter a website URL to verify this reference against the website content",
   "verify-references": "Verify References",
   "verify-references-by-searching-and-matching-them-to-entries-in-scholarly-databases": "Verify references by searching and matching them to entries in scholarly databases.",
+  "processing": "processed",
+  "processing-references-tooltip": "References are currently being verified against academic databases",
+  "references-processed": "references processed",
   "verify-extracted-references": "Verify extracted or parsed references",
   "verification-help-title": "How Verification Works",
   "verification-help-description": "Source Taster searches your references across multiple academic databases (Crossref, Semantic Scholar, etc.) to find matching publications. It then compares metadata like title, authors, and publication details using the Damerau-Levenshtein algorithm to calculate match scores and categorize results as exact, strong, possible, or no match.",
